# tabby-web

./: .bumpversion.cfg  .dockerignore  .editorconfig  .eslintrc.yml  .gitignore  Dockerfile  LICENSE  README.md  app-dist  cloudbuild.yaml  docker-compose.prebuilt.yml  docker-compose.yml  hypercorn.toml  index.html  index.pug  manage.py  package.json  polyfills.d.ts  pyproject.toml  styles.scss  terminal.d.ts  terminal.pug  terminal.ts  tsconfig.json  tsconfig.main.json  webpack.base.config.js  webpack.config.js  webpack.config.server.js  webpack.main.config.js  webpack.server.config.js  webpack.terminal.config.js  ~$cker-compose.yml
.github/workflows/: codeql-analysis.yml  docker-backend.yml  docker-frontend.yml  docker.yml  lint.yml
backend/: .dockerignore  .gitignore  Dockerfile  cloudbuild.yaml  gunicorn.conf.py  manage.py  manage.sh  pyproject.toml  requirements.txt  start.sh
backend/tabby/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
backend/tabby/app/: admin.py  api.py  apps.py  consumers.py  gateway.py  models.py  sponsors.py  urls.py  views.py
backend/tabby/app/api/: __init__.py  app_version.py  auth.py  config.py  gateway.py  info.py  system.py  user.py
backend/tabby/app/management/commands/: add_version.py
backend/tabby/app/migrations/: 0001_initial.py  0002_gateway.py  0003_auto_20210711_1855.py  0004_sync_token.py  0005_user_force_pro.py  0006_config_name.py
docs/: DEPLOYMENT.md
frontend/: .dockerignore  .eslintrc.yml  .gitignore  Dockerfile  cloudbuild.yaml  package-lock.json  package.json  tsconfig.json  webpack.config.base.js  webpack.config.js  webpack.config.server.js
frontend/src/: api.ts  app.component.ts  app.module.ts  app.server.module.ts  demo.html  demo.ts  index.html  index.server.ts  index.ts  interceptor.ts  server.ts  ssr-polyfills.ts  styles.scss  terminal-styles.scss  terminal.html  terminal.ts
frontend/src/app/: index.ts
frontend/src/common/: index.ts  interceptor.ts
frontend/src/components/: app.component.ts  connectionList.component.ts  demoTerminal.component.scss  demoTerminal.component.ts  home.component.pug  home.component.scss  home.component.ts  homeFeatures.component.pug  homeFeatures.component.scss  homeFeatures.component.ts  homeIndex.component.scss  homeIndex.component.ts  login.component.pug  main.component.ts  settingsModal.component.pug  settingsModal.component.ts  (+2 more)
frontend/theme/: index.scss  vars.scss
src/: api.ts  app.module.ts  app.server.module.ts  index.html  index.pug  index.ts  interceptor.ts  polyfills.ts  server.ts  ssr-interceptor.ts  ssr-polyfills.ts  styles.scss  terminal.html  terminal.pug  terminal.ts
src/components/: app.component.pug  app.component.scss  app.component.ts  configModal.component.pug  configModal.component.ts  home.component.pug  home.component.scss  home.component.ts  login.component.pug  login.component.scss  login.component.ts  main.component.pug  main.component.scss  main.component.ts  settingsModal.component.pug  settingsModal.component.ts
src/services/: appConnector.service.ts  common.service.ts  config.service.ts  login.service.ts
src/theme/: index.scss  vars.scss
tabby/: asgi.py  middleware.py  settings.py  urls.py
tabby/app/: admin.py  api.py  apps.py  consumers.py  models.py  sponsors.py  urls.py
terminus/: asgi.py  settings.py  urls.py  wsgi.py
terminus/app/: admin.py  api.py  apps.py  consumers.py  models.py  urls.py  views.py
(+49 files in other folders)
